// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should Change Route 1`] = `
<div>
  <NavBar
    onSelect={[Function]}
    route="SETTINGS"
  />
  <div
    className="page"
  >
    <h1
      className="title"
    >
      SETTINGS
    </h1>
    <div>
      <Checkbox
        checked={true}
        name="flagReplaced"
        onChange={[Function]}
      />
    </div>
    <button
      className="save"
      onClick={[Function]}
    >
      Save
    </button>
  </div>
  <div
    id="status"
  />
</div>
`;

exports[`Should Render App 1`] = `
<div>
  <NavBar
    onSelect={[Function]}
    route="OVERRIDES"
  />
  <div
    className="page"
  >
    <h1
      className="title"
    >
      OVERRIDES
    </h1>
    <OverridesList
      onChange={[Function]}
      overrides={
        Array [
          Object {
            "emoji": Object {
              "colons": ":grinning:",
              "emoticons": Array [],
              "id": "grinning",
              "name": "Grinning Face",
              "native": "😀",
              "skin": null,
              "unified": "1f600",
            },
            "filter": "bookface",
          },
        ]
      }
    />
    <button
      className="save"
      onClick={[Function]}
    >
      Save
    </button>
  </div>
  <div
    id="status"
  />
</div>
`;
